--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 }
 
 body {
-	background-color: transparent;
+	background-color: white;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -59,12 +59,12 @@ div#imgBg {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	filter: grayscale(30%) blur(20px) contrast(1.2) brightness(0.75) saturate(1.2);
+	filter: grayscale(30%) blur(20px) brightness(0.7) saturate(1.2);
 	z-index: -1;
 }
 
-div#imgDisplay > img,
-div#imgDisplay {
+div#imgDisplay > img {
+	filter: contrast(1.12);
 	box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
 }
 
