--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,8 @@ body,
 iframe {
 	margin: 0 !important;
 	padding: 0 !important;
+	height: 100vh !important;
+	width: 100vw !important;
 }
 
 img {
